fixed image size and features overlaping

--- a/src/components/features.css
+++ b/src/components/features.css
@@ -1,14 +1,13 @@
 .features {
   width: 80vw;
   margin: 0 auto;
-  padding: 0 0 1rem 0;
+  padding: 1rem 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   background-color: #f9f6ef;
-  
 }
 
 .features a {
